responsive-large-devices

--- a/src/components/AddsBanner/index.css
+++ b/src/components/AddsBanner/index.css
@@ -52,3 +52,34 @@
     width: 45%;
   }
 }
+
+@media (min-width:768px) and (max-width:991px){
+    .add-banner-img{
+    width: 150px;
+        min-height: 220px;
+  max-height: 280px;
+      
+        
+    }
+    .adds-banner-container{
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+    
+}
+}
+
+@media (min-width:992px) and (max-width:1199px){
+    .adds-banner-container{
+    display: flex;
+    flex-direction: column;
+    margin-right:0px;
+    width: 30%;
+    
+}
+.add-banner-img{
+    height: 300px;
+    width: 98%;
+    
+}
+}
