--- a/src/components/TodaysSpotLight/index.css
+++ b/src/components/TodaysSpotLight/index.css
@@ -85,3 +85,42 @@
 }
 
 }
+
+@media (min-width:768px)and (max-width:991px){
+  .spot-light-image{
+    width: 120px;
+    height: 120px;
+}
+.spot-light-list-item-container{
+    width: 48%;
+    margin: 3px;
+    padding: 10px;
+}
+.spot-light-text{
+    color: #1E90FF;
+    font-size: 14px;
+    margin-left: 8px;
+    font-weight: 600;
+    font-family: "Inter";
+   
+}
+.spot-light-link {
+  display: flex;        
+  align-items: center;
+  gap: 10px;            
+  text-decoration: none;
+  color: inherit;
+}
+  
+
+}
+
+@media (min-width:992px) and (max-width:1199px){
+  .spot-light-list-item-container{
+    width: 48%;
+  }
+  .spot-light-image{
+    width: 160px;
+    height: 180px;
+}
+}
