--- a/src/components/AddsBanner/index.css
+++ b/src/components/AddsBanner/index.css
@@ -83,3 +83,17 @@
     
 }
 }
+
+@media (min-width:1200px){
+    .adds-banner-container{
+    display: flex;
+    flex-direction: column;
+    margin-right:0px;
+    width: 24%;
+}
+.add-banner-img{
+    height: 230px;
+    width: 98%;
+    
+}
+}
