--- a/src/components/PopularNews/index.css
+++ b/src/components/PopularNews/index.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 10px;
+    flex-wrap: wrap;
 
 }
 .popular-news-item-card{
@@ -107,4 +108,19 @@
     width: 40%;
 }
 
+}
+
+@media (min-width:1200px){
+    .popular-news-image{
+    width: 70%;
+    height: 150px;
+}
+.popular-news-item-card{
+    width:32%;
+    margin: 3px;
+    padding: 10px;
+}
+.popular-news-text{
+    font-size: 16px;
+}
 }
