--- a/src/components/RecentPosts/index.css
+++ b/src/components/RecentPosts/index.css
@@ -116,3 +116,23 @@
 }
 
 }
+
+@media (min-width:1200px){
+   .recent-posts-unordered-container{
+   margin-left: 10px;
+} 
+.list-item-recent-post{
+  width: 98%;
+  margin: 5px;
+  padding: 5px;
+  height: 80px;
+  
+}
+.recent-post-image{
+    width: 30%;
+    height: 80px;
+}
+.recent-posts-para{
+    font-size: 12px;
+}
+}
