--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,6 +19,7 @@
 #home:hover{
     
     color: #FF69B4;
+    text-decoration: underline;
 }
 .epaper{
   text-decoration: none;
@@ -191,7 +192,7 @@ width: 100%;
 
 @media (min-width:768px)  and (max-width:991px){
     #home{
-        font-size: 20px;
+        font-size: 16px;
         margin-left: auto;
         margin-right: auto;
         font-weight: 500;   
