--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -66,7 +66,7 @@
   padding: 10px;
 }
 .reporter-button{
-  background-color: #007BFF;
+  background-color: #D23030;
   width: 80%;
   height: 40px;
   border: none;
