--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -38,6 +38,7 @@
 .company-container{
  width: 23%;
 
+
 }
 .horizontal-line{
     background-color: #DDEEFF;
@@ -68,6 +69,7 @@
 @media (max-width:600px) {
     .company-container{
         width:100%;
+        margin-top: 10px;
     }
     .website-info-in-footer{
         width: 100%;
