add-benners-added

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.add-banner-images{
+  width: 100%;
+  height:230px
+  ;
+}
 *{
   padding: 0px;
   margin: 0px;
@@ -80,16 +85,13 @@ overflow-x: hidden;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin:12px;
+  margin: 12px;
   
 }
 .bg-color-container{
   background-color: #D9D9D9;
-    width: 50%;
-    height: 95px;
-    margin-top: 12px;
+  width: 45%;
    
-
 }
 .map-form-container{
  display: flex;
@@ -366,8 +368,10 @@ overflow-x: hidden;
  
 }
 .logo-rti-express{
-  width: 180px;
-  height: 70px;
+ 
+  width: 300px;
+  height: auto;
+  
 }
 
 }
