--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -2,13 +2,15 @@
     background-color: #1877F2;
     margin-top: 10px;
     padding: 25px;
-    display: flex;
     
-    justify-content: space-evenly;
+}
+.footer-info-containerss{
+    display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .website-info-in-footer{
-    width: 30%;
+    width: 20%;
 }
 
 .footer-image-logo{
@@ -31,15 +33,40 @@
     font-size: 14px;
     margin-left: 10px;
     margin-bottom: 8px;
+    white-space: normal;
+word-break: break-word;
+overflow-wrap: break-word;
 }
 .company-container a{
     text-decoration: none;
 }
 .company-container{
- width: 23%;
+ width: 18%;
 
 
 }
+.legal-heading{
+     color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.legal-info-conatiner{
+    width: 26%;
+    margin: 0 auto;
+}
+
+.legal-info-conatiner p{
+     color: #DDEEFF;
+    font-size: 14px;
+    margin-left: 10px;
+    margin-bottom: 8px;
+    white-space: normal;
+word-break: break-word;
+overflow-wrap: break-word;
+}
+
+
 .horizontal-line{
     background-color: #DDEEFF;
     height: 1px;
@@ -53,11 +80,7 @@
     color: #DDEEFF;
     margin-top: 10px;
 }
-.copy-right-container p{
-    margin-left: 15px;
-    margin-right: 10px;
 
-}
 .copy-right-logo-text{
     display: flex;
     flex-direction: row;
@@ -66,7 +89,7 @@
 .copy-righ-icon{
     margin-bottom: 6px;
 }
-@media (max-width:600px) {
+@media (max-width:767px) {
     .company-container{
         width:100%;
         margin-top: 10px;
@@ -78,6 +101,10 @@
     margin-left: 0px;
     margin-right: 0px;
 
+}
+.legal-info-conatiner{
+    width: 100%;
+    margin-top: 10px;
 }
 .copy-right-container{
     display: flex;
