--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -20,6 +20,7 @@
     color: #DDEEFF;
     font-size: 16px;
     font-weight: 400;
+    margin-left: 10px;
 }
 .company-name-heading{
     color: #FFFFFF;
