--- a/src/components/RTIReporterForm/index.css
+++ b/src/components/RTIReporterForm/index.css
@@ -1,3 +1,15 @@
+.rti-reporter-heading{
+    align-self: center;
+}
+.rti-reporter-label-element{
+  align-self: flex-start;
+   
+   font-size: 16px;
+    color: #333333;
+    font-weight: 500;
+    display: block;
+  
+}
 .modal-overlay {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
@@ -11,7 +23,7 @@
 
 .modal-content {
  background-color: #f5f5f5;
-  padding: 20px 20px;
+  padding: 20px;
   border-radius: 8px;
   
   width: 40%;
@@ -19,8 +31,14 @@
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+        
+    /*  justify-content: center;
+      align-items: center;
+*/
+      max-height: 90vh; 
+  overflow-y: auto; 
+  display: block;
+  margin: 0 auto;
 }
   
 /*.rti-repoerter-main-cointainer{
@@ -35,11 +53,11 @@
 .rti-reporter-form-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /*justify-content: center;
+    align-items: flex-start; */
     width: 100%;
     border-radius: 8px;
- 
+ padding-left: 30px;
   
 }
 
@@ -55,6 +73,7 @@
    font-size: 14px;
     transition: border-color 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
  margin-bottom: 8px;
+
 }
 .rti-reporter-input-element:focus{
     background-color: #ffffff;
@@ -76,7 +95,7 @@
     color: #ffffff;
     font-size: 16px;
     font-weight: 600;
-
+    align-self: center;
 }
 
 @media (max-width:375px){
