--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,15 +31,18 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   width: 50%;
   margin-top: 10px;
 }
-.horizontal-line{
-  border: 1px solid black;
-  
-background-color: "blue";
+
+.horizontal-line-mobile-view{
+
+  height: 2px;
+background-color: black;
 width: 100%;
+  border: none;
+  
 }
 @media (max-width:575px){
     .Header-container{
