--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-.add-banner-images{
+/* .add-banner-images{
   width: 100%;
   height:250px;
-}
+} */
+
 *{
   padding: 0px;
   margin: 0px;
@@ -90,6 +91,7 @@ overflow-x: hidden;
 .bg-color-container{
   background-color: #D9D9D9;
   width: 45%;
+  height: 80px;
    
 }
 .map-form-container{
@@ -286,7 +288,7 @@ overflow-x: hidden;
 }
 .bg-color-container{
   
-  width: 60%;
+  width: 55%;
    
 }
 
@@ -336,7 +338,7 @@ overflow-x: hidden;
 }
 .bg-color-container{
   
-  width: 65%;
+  width: 60%;
    
 }
 
@@ -384,7 +386,7 @@ overflow-x: hidden;
   
 }
 .bg-color-container{
-  width: 55%;
+  width: 50%;
 }
 
 }
