--- a/src/components/AddsBanner/index.css
+++ b/src/components/AddsBanner/index.css
@@ -1,7 +1,7 @@
 .add-banner-img{
     width: 400px;
     height: 215px;
-    margin: 5px;
+    margin-right: 5px;
 }
 .adds-banner-container{
     display: flex;
@@ -12,15 +12,18 @@
 
 @media (max-width:375px){
     .adds-banner-container{
-        margin: 5px;
+      
         width: 100%;
+       
+        margin-right: 0px;
     }
-    .add-image1{
-        width: 0px;
-    }
-    .add-image2{
-        width: 60px;
-    }
+   .add-banner-img{
+    width: auto !important;
+   height: auto !important;
+    max-width: 50%;
+    max-height: 400px;
+}
+
 }
 
 @media (max-width:575px){
@@ -31,8 +34,10 @@
         margin: 5px;
     }
     .add-banner-img{
-        width: 250px;
-        height: 150px;
+         width: auto !important;
+   height: auto !important;
+    max-width: 50%;
+    max-height: 400px;
     }
 }
 
@@ -40,31 +45,40 @@
     .adds-banner-container {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+   
     align-items: center;
     justify-content: center;
-    gap: 10px;
+   
     margin: 5px;
     width: 100%;
   }
 
   .add-banner-img {
-    width: 45%;
+     width: 42%;
+   height: auto ;
+    
+    max-height: 400px;
   }
 }
 
 @media (min-width:768px) and (max-width:991px){
     .add-banner-img{
-    width: 150px;
-        min-height: 220px;
-  max-height: 280px;
-      
+     /* width: 150px;
+    min-height: 220px;
+     max-height: 280px; */
+       width:auto;
+   height: auto ;
+   max-width: 100%;
+    max-height: 400px;
+    margin-bottom: 5px;
         
     }
     .adds-banner-container{
     display: flex;
     flex-direction: column;
-    margin-right: 10px;
+    width: 25%;
+    margin-right: 0px;
+    margin-top: 5px;
     
 }
 }
@@ -73,13 +87,19 @@
     .adds-banner-container{
     display: flex;
     flex-direction: column;
-    margin-right:0px;
+    margin-top:10px;
     width: 30%;
+    margin-right: 0px;
     
 }
 .add-banner-img{
-    height: 300px;
-    width: 98%;
+    /* height: 300px;
+    width: 98%; */
+      width:auto;
+   height: auto ;
+   max-width: 100%;
+    max-height: 400px;
+    margin-bottom: 5px;
     
 }
 }
@@ -89,12 +109,33 @@
     display: flex;
     flex-direction: column;
     margin-right:0px;
-    width: 24%;
+    width: 30%;
+    margin-top: 10px;
+    
 }
 .add-banner-img{
     /* height: 250px; */
-    height: 350px;
-    width: 98%;
+   width:auto;
+   height: auto ;
+   max-width: 100%;
+    max-height: 400px;
+    margin-bottom: 5px;
+   
     
 }
+.add-image2{
+    display: none;
+}
+/* .banner-image-1{
+    width: 100%;
+  height: auto;
+  max-height: 300px;
+  
+}
+.banner-image-2{
+    width: 100%;
+  height: auto;
+  max-height: 350px;
+ 
+} */
 }
