--- a/src/components/SliderWithContent/index.css
+++ b/src/components/SliderWithContent/index.css
@@ -268,52 +268,54 @@
     display: none;
   }
   .slider-container{
-    width: 100%;
+    width: 60%;
     text-align: center;
+
   }
   .slider-image{
     width: 95%;
-    height: 300px;
+    height: 260px;
     margin: 0 auto;
   }
   .slider-top-rti-join-container{
     display: flex;
-    flex-direction: column;
+   
   }
   .rti-join-and-news-letter-container{
    display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  width: 95%;
-  margin: 10px auto;
+  width: 40%;
+  
   
 }
 .rti-join-container{
  
-  height: 170px;
-  margin-right: 5px;
-  width: 50%;
+  height: 130px;
+  margin-bottom: 5px;
+  width: 100%;
   padding-bottom: 15px;
 }
 .join-heading{
   
   font-weight: 600;
   font-size: 22px;
-  
-  
   padding: 10px;
 }
 .reporter-button{
-  width: 70%;
-  font-weight: 600;
+  width: 60%;
+  font-weight: 500;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
   
 }
 
 .news-letter-container{
-  width: 50%;
-  margin-top: 0px;
-  height: 170px;
-  margin-left: 5px;
+  width: 100%;
+ 
+  height: 130px;
+  margin-top: 5px;
   padding: 10px;
 }
 .daily-news-letter-heading{
@@ -326,11 +328,15 @@
   font-size: 15px;
   font-weight: 500;
 }
+.news-letter-mail-container{
+  width: 80%;
+}
 .spot-light-home-container{
-    width: 80%;
+    width: 75%;
     margin-left: 20px;
     margin-top: 10px;
 } 
+
 .home-popular-recent-posts-conatiner{
   display: flex;
   flex-direction: column;
@@ -399,7 +405,7 @@
 .spot-light-home-container{
     width: 70%;
     margin-left: 0px;
-    margin-top: 20px;
+    margin-top: 0px;
 } 
 .home-popular-news-container{
   width: 60%;
@@ -437,7 +443,7 @@
 }
 .rti-join-container{
   background-color: #1877F2B2;
-  width: 98%;
+  width: 100%;
   height: 180px;
 }
 .join-heading{
@@ -450,7 +456,7 @@
 
 }
 .news-letter-container{
-  width: 98%;
+  width: 100%;
   height: 180px;
   margin-top: 10px;
 }
@@ -465,9 +471,9 @@
   width: 70%;
 }
 .spot-light-home-container{
-    width: 75%;
+    width: 70%;
     margin-left: 25px;
-    margin-top: 20px;
+    margin-top: 0px;
 } 
 .home-spot-light-adds-container{
  
