footer-logo-size-increased

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -14,7 +14,8 @@
 }
 
 .footer-image-logo{
-    width: 35%;
+    width: 60%;
+    height: auto;
 }
 .website-info-in-footer p{
     /* color: #DDEEFF; */
@@ -121,5 +122,8 @@ overflow-wrap: break-word;
 .copy-right-container{
     display: flex;
     flex-direction: column;
+}
+.footer-image-logo{
+    width: 30%;
 }
 }
