--- a/src/App.css
+++ b/src/App.css
@@ -47,11 +47,11 @@ overflow-x: hidden;
   ;
 }
 .website-mail{
-  font-size: 18px !important;
+  font-size: 12px !important;
  font-weight: 600;
  margin-bottom: 0px !important;
   padding-bottom: 0px !important;
-  margin-top: 5px;
+  margin-top: 4px;
 }
 
 .top-left-side-text-container{
@@ -76,7 +76,7 @@ overflow-x: hidden;
 }
 .logo-rti-express{
   width: 140px;
-  height: 60px;
+  height: 40px;
   margin-top: 12px;
  
 }
@@ -170,6 +170,11 @@ overflow-x: hidden;
 }
 .feedback{
   margin-right: 5px;
+   font-family: "Poppins";
+  font-weight: 600;
+  font-size: 12px;
+
+  color: #000000;
 }
 .facebook{
   color:	#1877F2;
@@ -184,7 +189,7 @@ overflow-x: hidden;
   color: #0A66C2;
 }
 .twitter{
-  color: #1DA1F2;
+  color: #000000;
 }
 .map-icon{
   color: #3B82F6;
@@ -381,7 +386,7 @@ overflow-x: hidden;
 }
 .logo-rti-express{
  
-  width: 300px;
+  width: 200px;
   height: auto;
   
 }
