--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,6 +17,7 @@
 
 #home{
     color: #FFFFFF;
+    font-weight: 500;
 }
 
 #home:hover{
@@ -230,6 +231,7 @@ width: 100%;
 }
 @media (min-width:1200px){
   #home{
-    font-size: 18px;
+    font-size: 16px;
+   
   }
 }
