--- a/src/components/PopularNews/index.css
+++ b/src/components/PopularNews/index.css
@@ -17,7 +17,7 @@
     align-items: center;
      margin: 5px;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-   padding: 15px;
+   padding: 10px;
    border-radius: 5px; 
    width: 45%;
 }
@@ -26,6 +26,7 @@
     font-size: 16px;
     font-family: "Inter";
     font-weight: 400;
+    text-align: center;
 }
 .popular-news-link-eleemnt{
    display: flex;  
@@ -50,7 +51,7 @@
            box-sizing: border-box;
     }
     .popular-news-image{
-        width: 100px;
+        width: 60%;
         height: 100px;
     }
     .popular-news-text{
@@ -60,7 +61,7 @@
 
 @media (max-width:575px){
     .popular-news-image{
-        width: 100px;
+        width: 70%;
         height: 100px;
     }
     .popular-news-item-card{
@@ -75,16 +76,20 @@
 
 @media (min-width:576px) and (max-width:767px){
     .popular-news-image{
-        width: 120px;
+        width: 70%;
         height: 120px;
     }
     .popular-news-item-card{
-        width: 30%;
-        padding: 10px;
+        width: 45%;
+        
     }
     
     .popular-news-text{
         font-size: 16px;
+        text-align: center;
+    }
+    .popular-news-unordered-container{
+        margin-left: 15px;
     }
 }
 
@@ -98,18 +103,18 @@
     font-weight: 500;
 }
 .popular-news-item-card{
-        width: 30%;
+        width: 45%;
         padding: 10px;
     }
 }
 
 @media (min-width:992px) and (max-width:1199px){
 .popular-news-image{
-    width: 90%;
+    width: 70%;
     height: 160px;
 }
 .popular-news-item-card{
-    width: 31%;
+    width: 45%;
 }
 
 }
