--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,7 +12,10 @@
     justify-content: space-evenly;
     padding: 10px 20px;
     box-sizing: border-box;
-    z-index: 1;
+     z-index: 10;
+
+  position: sticky; /* key */
+  top: 0;        
 }
 
 #home{
@@ -52,12 +55,18 @@ width: 100%;
     .mobile-view-small-large-screen-hamburger-icon-container{
         background-color: #d9d9d9;
         height: 50px;
-       margin-bottom: 20px;
+      
        display: flex;
        align-items: center;
        flex-direction: row;
        justify-content: space-between;
        padding: 20px 0px 20px 20px;
+       position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;   
+        z-index: 1000   
+
     }
     .mobile-logo-rti-express{
         width: 80px;
@@ -132,12 +141,17 @@ width: 100%;
     .mobile-view-small-large-screen-hamburger-icon-container{
         background-color: #d9d9d9;
         height: 50px;
-       margin-bottom: 20px;
+      
        display: flex;
        align-items: center;
        flex-direction: row;
        justify-content: space-between;
        padding: 20px 0px 20px 20px;
+       position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;   
+        z-index: 1000 
     }
     .mobile-logo-rti-express{
         width: 80px;
