--- a/src/components/LiveNews/index.css
+++ b/src/components/LiveNews/index.css
@@ -1,7 +1,22 @@
 .unordered-live-news-container{
     list-style-type: none;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
 }
+.live-news-item-card{
+    width: 35%;
+    padding: 10px;
+    border: 1px solid #000000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 5px;
+}
+
 .live-news-image{
     width: 200px;
-    height: 200px;
+    height: 120px;
 }
