--- a/src/components/RecentPosts/index.css
+++ b/src/components/RecentPosts/index.css
@@ -12,7 +12,7 @@
     flex-direction: row;
     align-items: center;
      margin: 5px;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 8px 0px #00000033;
    padding: 15px;
    border-radius: 5px; 
    height: 100px;
